--- a/lessons/00_Turtles/05a_Loops.ipynb
+++ b/lessons/00_Turtles/05a_Loops.ipynb
@@ -58,9 +58,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loop Iteration 0\n",
+      "Loop Iteration 1\n",
+      "Loop Iteration 2\n",
+      "Loop Iteration 3\n"
+     ]
+    }
+   ],
    "source": [
     "# For loop; try ganing the number of iterations to 6\n",
     "for i in range(4):\n",
@@ -85,10 +96,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import turtle                           # Tell Python we want to work with the turtle\n",
+    "turtle.setup (width=600, height=600)    # Set the size of the window\n",
+    "\n",
+    "tina = turtle.Turtle()                  # Create a turtle named tina\n",
+    "tina.shape('turtle')                    # Set the shape of the turtle to a turtle\n",
+    "tina.speed(2                         \n",
+    "for i in range (4):\n",
+    "    tina.forward(150)                      \n",
+    "    tina.left(90)                           \n",
+    "\n",
+    "\n",
+    "turtle.exitonclick() "
+   ]
   }
  ],
  "metadata": {
@@ -107,7 +131,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
