--- a/lessons/00_Turtles/06_Variables_and_Functions.ipynb
+++ b/lessons/00_Turtles/06_Variables_and_Functions.ipynb
@@ -33,9 +33,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "60.0"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Run me\n",
     "# Compute the angle for a number of sides\n",
@@ -75,15 +86,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Angle for 1 1  sides is 10 360.0\n",
+      "Angle for 1 2  sides is 10 180.0\n",
+      "Angle for 1 3  sides is 10 120.0\n",
+      "Angle for 1 4  sides is 10 90.0\n",
+      "Angle for 1 5  sides is 10 72.0\n",
+      "Angle for 1 6  sides is 10 60.0\n",
+      "Angle for 1 7  sides is 10 51.42857142857143\n",
+      "Angle for 1 8  sides is 10 45.0\n",
+      "Angle for 1 9  sides is 10 40.0\n"
+     ]
+    }
+   ],
    "source": [
     "# Run me!\n",
     "\n",
     "for sides in range(1, 10):\n",
-    "    angle = ...\n",
-    "    print(\"Angle for \", sides, \" sides is \", angle)\n",
+    "    angle = 360/sides\n",
+    "    print(\"Angle for 1\", sides, \" sides is 10\", angle)\n",
     "   "
    ]
   },
@@ -99,9 +126,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 Hello  John\n",
+      "1 Hello  John\n",
+      "2 Hello  John\n",
+      "3 Hello  John\n",
+      "4 Hello  John\n"
+     ]
+    }
+   ],
    "source": [
     "def say_hello(name, times):         # define the function, and give it a name.  'name' and 'times' are parameters\n",
     "\n",
@@ -122,9 +161,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 Hello  bob\n",
+      "1 Hello  bob\n",
+      "2 Hello  bob\n"
+     ]
+    }
+   ],
    "source": [
     "say_hello('bob',3)"
    ]
@@ -153,7 +202,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.0"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
